Got generate statement working!
Still got a few bugs in imagPos and realPos that need to be fixed, will
hopefully be done this weekend.

--- a/Extended-Essay-master/Extended-Essay-master/Mandelbrot_NOT_CLOCKED/Mandelbrot_NOT_CLOCKED.runs/synth_1/.vivado.begin.rst
+++ b/Extended-Essay-master/Extended-Essay-master/Mandelbrot_NOT_CLOCKED/Mandelbrot_NOT_CLOCKED.runs/synth_1/.vivado.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado.bat" Owner="Kaveh" Host="KAVEH_BARDIA_PC" Pid="9680">
+    <Process Command="vivado.bat" Owner="kaveh" Host="KAVEH_SP" Pid="5864">
     </Process>
 </ProcessHandle>
