--- a/Extended-Essay-master/Extended-Essay-master/Mandelbrot_NOT_CLOCKED/Mandelbrot_NOT_CLOCKED.runs/synth_1/.vivado.begin.rst
+++ b/Extended-Essay-master/Extended-Essay-master/Mandelbrot_NOT_CLOCKED/Mandelbrot_NOT_CLOCKED.runs/synth_1/.vivado.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado.bat" Owner="Kaveh" Host="KAVEH_BARDIA_PC" Pid="15844">
+    <Process Command="vivado.bat" Owner="kaveh" Host="KAVEH_SP" Pid="7048">
     </Process>
 </ProcessHandle>
